# db-mcp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run.sh
db_mcp/: classifier.py  connections.py  server.py
tests/: conftest.py  test_classifier.py  test_connections.py  test_server.py
