[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-mcp"
version = "0.1.0"
description = "MCP server for multi-database access with LLM permission gating"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",   # PostgreSQL, included by default
    # SQLite is built into Python, no extra dep needed
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]
mysql = ["PyMySQL>=1.1"]
mssql = ["pyodbc>=5.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0.0", "pytest-mock>=3.14.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=db_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["db_mcp"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[project.scripts]
db-mcp = "db_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["db_mcp"]
